# bambictf

./: .dockerignore  .gitignore  .vsls.json  Dockerfile  Enoflag.pem  LICENCE  Makefile  README.md  Vagrant.sh  Vagrantfile  ansible.cfg  baseimage.json  clean_records.py  docker-compose.yml  engine.json  manual_provision.sh  scoreboard2ctftime.py  sshconfig  vulnbox.json
ansible/: .ansible-lint  .ansible-lint-ignore  Vagrantfile  apply.yml  aptrepo.yml  bambiarkime.yml  bambichecker.yml  bambielk.yml  bambiengine.yml  bambimoloch.yml  bambirouter.yml  bambiserver.yml  bambivulnbox.yml  config_bambi.yml.sample  elk.yml  gameengine.yml  mainvm.yml  openvpn-server.yml  static.yml  swarm_slave.yml  vulnbox.yml
config/: gen_config.sh
configgen/: pyproject.toml
configgen/configgen/: __init__.py  gen_openvpn.py  gen_wireguard_game.py  gen_wireguard_internal.py  util.py
http/: baseimage.cfg  preseed.cfg
packer/: bambiarkime.json  bambichecker.hcl  bambichecker.json  bambichecker.pkr.hcl  bambielk.hcl  bambielk.json  bambielk.pkr.hcl  bambiengine.hcl  bambiengine.json  bambiengine.pkr.hcl  bambimoloch.json  bambirouter.json  bambirouter.pkr.hcl  bambivulnbox.json  bambivulnbox.pkr.hcl
proxy/: .terraform.lock.hcl  proxy.tf  squid_acl.txt  terraform.tfvars.sample  user_data_proxy.tftpl
terraform/: .terraform.lock.hcl  .terraform.tfstate.lock.info  Makefile  Vagrantfile  bambi.tf  bambiarkime.tf  bambichecker.json  bambichecker.tf  bambictf.tf  bambielk.tf  bambiengine.json  bambiengine.tf  bambirouter.json  bambirouter.tf  bambivulnbox.json  bambivulnbox.tf  main.tf  (+10 more)
(+220 files in other folders)
